# rust-in-memory-db-with-chart

./: .gitignore  Cargo.toml  Dockerfile  README.md  push.sh  rustfmt.toml
arrow_db/: Cargo.toml
arrow_db/src/: arrow_db.rs  lib.rs
coinbase_websocket/: Cargo.toml
coinbase_websocket/src/: coinbase.rs  websocket.rs  ws_inbound.rs  ws_lib.rs
common_lib/: Cargo.toml
common_lib/src/: cb_ticker.rs  heartbeat.rs  init.rs  lib.rs  operator.rs
db/: Cargo.toml
db/src/: arrow_db.rs  calculation.rs  event_book.rs  event_log.rs  lib.rs
logger/: .gitignore  Cargo.toml
logger/src/: event_book.rs  event_log.rs  lib.rs
main/: Cargo.toml
main/src/: db.rs  main.rs  market.rs
src/: algorithm.rs  coinbase.rs  db.rs  lib.rs  main.rs  market.rs  market_structs.rs  ticker.rs  websocket.rs
visual/: Cargo.toml
visual/src/: analysis.rs  api_internals.rs  chat_handler.rs  chat_main.rs  chat_server.rs  handler_chart.rs  http_server.rs  lib.rs
visual/static/certificate/: cert.pem  generate.sh  key.pem
visual/static/templates/: account.html  activity_table.html  analysis.html  base0.html  chart.html  chart2.html  chart_multi.html  chart_ws.html  chart_ws_old.html  dashboard.html  login_result.html  order_table.html  position.html  profit_table.html  settings_table.html  symbol_table.html  transactions.html
ws/: Cargo.toml
ws/src/: coinbase.rs  ws_alpaca.rs  ws_coinbase.rs  ws_lib.rs
ws_broadcast/src/: client.rs  lib.rs  server.rs
ws_client/src/: client.rs  ws_alpaca.rs  ws_coinbase.rs  ws_lib.rs
ws_server/: Cargo.toml  readme.md
ws_server/src/: client.rs  command.rs  server.rs
