[package]
name = "market_watcher"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

[dependencies]

# Chrono with serde
# https://docs.rs/chrono/0.4.19/chrono/index.html
chrono = { version = "0.4.15", features = ["serde"]}

# https://crates.io/crates/rust_decimal
rust_decimal = "1.8.1"
# uuid = { version = "0.8", features = ["serde", "v4"] }
crossbeam = "0.8.0"

# websocket
tungstenite = {version = "0.11.1", features = ["native-tls"] }
native-tls = "0.2.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.1.1"

# log / env
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.7.1"

# Postgres
postgres={version = "0.18.0", features = ["with-chrono-0_4"]}

