[package]
name = "market_watcher"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

[dependencies]
# log / env
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
strum={ version= "0.25.0", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
strum_macros = "0.25.1"

bigdecimal = {version = "0.4.1", features = ["serde"]}

# Chrono with serde
# https://docs.rs/chrono/0.4.19/chrono/index.html
chrono = { version = "0.4.1", features = ["serde"]}

# https://crates.io/crates/rust_decimal
#rust_decimal = "1.8.1"
# uuid = { version = "0.8", features = ["serde", "v4"] }
crossbeam = "0.8.0"

# websocket
tungstenite = {version = "0.11.1", features = ["native-tls"] }
native-tls = "0.2.4"

serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
url = "2.1.1"



# Postgres
# postgres={version = "0.18.0", features = ["with-chrono-0_4"]}

