[package]
name = "market_watcher"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

[lib]
name="ws_lib"
path= "src/lib.rs"

[[bin]]
name="market_watcher"
path="src/main.rs"


[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
strum={ version= "0.25.0", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
strum_macros = "0.25.1"
bigdecimal = {version = "0.4.1", features = ["serde"]}
chrono = { version = "0.4.1", features = ["serde"]}
crossbeam = "0.8.0"
tungstenite = {version = "0.20.0", features = ["native-tls"] }
native-tls = "0.2.4"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
url = "2.1.1"