[package]
name = "arrow_lib"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = "1.29.1"
common_lib = { path="../common_lib"}
logger = { path="../logger"}
serde = { version = "1.0.175", features = ["derive"] }
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
chrono = { version = "0.4.26", features = ["serde"]}
bounded-vec = "0.7.1"

# apache arrow
arrow = "44.0.0"
arrow-schema = "44.0.0"

# https://docs.rs/slice-ring-buffer/latest/src/slice_ring_buffer/lib.rs.html#1-5977
slice-ring-buffer = "0.3.2"


# todo: remove
serde_json="1.0.91"