[package]
name = "common_lib"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
strum={ version= "0.25.0", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
strum_macros = "0.25.1"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.175", features = ["derive"] }
chrono = { version = "0.4.1", features = ["serde"]}

