[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path="../common_lib"}
datafusion = "33.0.0"
tokio = "1.29.1"
tracing = "0.1.37"
slice-ring-buffer = "0.3.2"
serde = { version = "1.0.175", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"]}
strum={ version= "0.25.0", features=["derive"]}  # https://stackoverflow.com/questions/69015213/how-can-i-display-an-enum-in-lowercase
strum_macros = "0.25.1"


# todo: remove
serde_json="1.0.91"