[package]
name = "main"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

[[bin]]
name="main"
path="src/main.rs"

[dependencies]
tokio = "1.29.1"
tracing = "0.1.37"
arrow_lib = { path ="../arrow_db"}
common_lib = { path="../common_lib"}
visual = { path="../visual"}
coinbase_websocket = { path="../coinbase_websocket"}