[package]
name = "main"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

[[bin]]
name="main"
path="src/main.rs"

[dependencies]
tokio = "1.29.1"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
chrono = { version = "0.4.26", features = ["serde"]}
serde_json = "1.0.103"

db = { path = "../db" }
common_lib = { path="../common_lib"}
ws_broadcast = { path= "../ws_server" }
visual = { path="../visual"}
ws = { path= "../ws_client" }

