[package]
name="visual"
version="0.1.1"
edition="2021"

[lib]


[dependencies]
common_lib = { path="../common_lib"}
actix-web = "4.3.1"
tokio = "1.29.1"
datafusion = "33.0.0"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.175", features = ["derive"] }
chrono = { version = "0.4.1", features = ["serde"]}