[package]
name="visual"
version="0.1.1"
edition="2021"

[lib]


[dependencies]
common_lib = { path="../common_lib"}

# web
tokio = "1.29.1"
actix-web = {version ="4.3.1", features=["rustls"]}
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
handlebars = { version = "4.3.7", features = ["dir_source"] }

datafusion = "33.0.0"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.175", features = ["derive"] }
chrono = { version = "0.4.1", features = ["serde"]}
