[package]
name="visual"
version="0.1.1"
edition="2021"

[lib]


[dependencies]
common_lib = { path="../common_lib"}

# web
tokio = {version = "1.29.1", features=["macros"]}


actix = "0.13.0"
actix-web = {version ="4.3.1", features=["rustls"]}
#actix-web-actors = "4.2.0"
actix-ws = "0.2.5"


actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
handlebars = { version = "4.3.7", features = ["dir_source"] }

datafusion = "33.0.0"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.175", features = ["derive"] }
serde_json="1.0.91"
chrono = { version = "0.4.1", features = ["serde"]}


# TODO: from example, remove
futures-util = "0.3.28"
rand = "0.8.5"
#log = "0.4.19"
#env_logger = "0.10.0"