[package]
name = "ws_broadcast"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common_lib = { path="../common_lib"}

# init stuff
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
strum={ version= "0.25.0", features=["derive"]}
strum_macros = "0.25.1"

tungstenite = "0.20.0"
url = "2.4.0"
crossbeam-channel = "0.5.8"


